<resources>
    <string name="app_name">Budget</string>
    <string name="title_categories">Categories</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_settings">Settings</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_createAccount">Create Account</string>
    <string name="login_resetPassword">Reset Password</string>
</resources>
